--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,6 +18,23 @@ post_class: post-template
     margin-left: auto !important;
     margin-right: auto !important;
   }
+  .PageNavigation {
+    font-size: 14px;
+    display: block;
+    width: auto;
+    overflow: hidden;
+  }
+
+  .PageNavigation a {
+    display: block;
+    width: 50%;
+    float: left;
+    margin: 1em 0;
+  }
+
+  .PageNavigation .next {
+    text-align: right;
+  }
 </style>
 
 <header class="main-header post-head {% if page.cover %}" style="background-image: url({{ page.cover }}) {%else%}no-cover{% endif %}">
@@ -33,12 +50,12 @@ post_class: post-template
 
         <header class="post-header">
             <h1 class="post-title">{{ page.title }}</h1>
-            <section class="post-meta">
+            <!-- <section class="post-meta">
                 <time class="post-date" datetime="{{ page.date | date:"%Y-%m-%d" }}">{{ page.date | date_to_string }}</time>
                 {% if page.categories.size > 0 %}
                     {{ page.categories | array_to_sentence_string | prepend: 'on ' }}
                 {% endif %}
-            </section>
+            </section> -->
         </header>
 
 <!--         <header class="post-header">
@@ -64,7 +81,9 @@ post_class: post-template
             {{content}}
         </section>
 
-        {% if page.archive %}
+        {% include postpaginator.html %}
+
+        <!-- {% if page.archive %}
         <section class="archive">
             <h5>Archive</h5>
             <ul>
@@ -73,7 +92,7 @@ post_class: post-template
                 {% endfor %}
             </ul>
         </section>
-        {% endif %}
+        {% endif %} -->
 
         <footer class="post-footer">
             <!-- If we want to display author's name and bio -->
