Add new posts :computer:

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,6 +6,10 @@ post_class: post-template
 ---
 
 <style media="screen">
+  h5 {
+    color: #999999 !important;
+    margin-top: 50px !important;
+  }
   .img-100 {
     width: 100%;
     height: 100%;
