--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,26 +3,14 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    {% if page.title %}
-      <title>{{ page.title }} - {{ site.name }}</title>
-      <meta property="og:title" content="{{page.title}}" />
-      <meta property="og:description" content="{{site.description}}" />
-    {% else %}
-      <title>{{ site.name }} - {{ site.description }}</title>
-      <meta property="og:title" content="{{site.name}}" />
-      <meta property="og:description" content="{{site.description}}" />
-    {% endif %}
-    {% if page.url %}
-      <meta property="og:url" content="{{site.url}}{{page.url}}" />
-    {% endif %}
     <meta name="description" content="{{ site.meta_description}}" />
     <meta name="HandheldFriendly" content="True" />
     <meta name="MobileOptimized" content="320" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:image" content="https://cursodeios.github.io/assets/images/site-img.png" />
     <link rel="stylesheet" type="text/css" href="/assets/css/screen.css" />
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Merriweather:300,700,700italic,300italic|Open+Sans:700,400" />
     <link rel="stylesheet" type="text/css" href="/assets/css/main.css" />
+    {% include cards.html %}
 </head>
 <body class="{% if page.post_class %}{{page.post_class}}{% else %}home-template{% endif %}">
 
