--- a/_includes/cards.html
+++ b/_includes/cards.html
@@ -1,13 +1,13 @@
 <!-- other stuff in your site header like javascript or whatever above here -->
 
-  <meta name="twitter:card" content="summary_large_image">
+  <!-- <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@your_twitter_handle">
-  <meta name="twitter:creator" content="@your_twitter_handle">
+  <meta name="twitter:creator" content="@your_twitter_handle"> -->
 
   <!-- hardcoding an image here so I don't have to worry about attaching an image to each blog post in the future  -->
 
-  <meta property="og:image" content="{{ site.url }}/img/twitter_card2.png" />
-  <meta name="twitter:image:src" content="{{ site.url }}/img/twitter_card2.png">
+  <meta property="og:image" content="{{ site.url }}/assets/images/site-img.png" />
+  <meta name="twitter:image:src" content="{{ site.url }}/assets/images/site-img.png">
   <meta content="{{ site.title }}" property="og:site_name">
 
   <!-- Set a page title, or default to site title if missing for some reason  -->
