--- a/_includes/style.html
+++ b/_includes/style.html
@@ -27,6 +27,8 @@
     width: 50%;
     float: left;
     margin: 1em 0;
+    color: #2196F3;
+    font-size: 16px;
   }
 
   .PageNavigation .next {
