--- a/_includes/style.html
+++ b/_includes/style.html
@@ -1,6 +1,7 @@
 <style media="screen">
   h5 {
-    color: #999999 !important;
+    color: #9E9E9E !important;
+    text-decoration: underline;
     margin-top: 50px !important;
   }
   .img-100 {
