--- a/_includes/style.html
+++ b/_includes/style.html
@@ -1,6 +1,6 @@
 <style media="screen">
   h5 {
-    color: #9E9E9E !important;
+    color: #00000 !important;
     /*text-decoration: underline;*/
     margin-top: 50px !important;
   }
