--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,8 @@
     {{ content }}
     <footer class="site-footer clearfix">
       <section class="copyright">
-        <a href="{{ site.baseurl }}">{{ site.name }}</a> &copy; {{ site.time | date: '%Y'}} &bull; All rights reserved.
+        <a href="{{ site.baseurl }}">{{ site.name }}</a> &bull; {{ site.time | date: '%Y'}}
+        <!-- <a href="{{ site.baseurl }}">{{ site.name }}</a> &copy; {{ site.time | date: '%Y'}} &bull; All rights reserved. -->
       </section>
     </footer>
     <script type="text/javascript" src="/assets/js/jquery-1.11.1.min.js"></script>
