--- a/_includes/archive.html
+++ b/_includes/archive.html
@@ -3,7 +3,7 @@
      <h5>Archivo</h5>
      <ul>
          {% for post in site.posts %}
-             <li><span>{{ post.date | date:"%Y-%m-%d" }}</span>  <a href="{{ post.url }}">{{ post.title }}</a></li>
+             <li>  <a href="{{ post.url }}">{{ post.title }}</a></li>
          {% endfor %}
      </ul>
  </section>
