--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,8 +4,8 @@ post_class: post-template page-template
 ---
 
 <nav class="main-nav clearfix">
-    <a class="back-button icon-arrow-left" href="{{ site.baseurl }}">Inicio</a>
-    <a class="subscribe-button icon-feed" href="{{ site.baseurl }}feed.xml">Suscribirse</a>
+    <a class="back-button icon-arrow-left" href="/">Inicio</a>
+    <a class="subscribe-button icon-feed" href="/feed.xml">Suscribirse</a>
 </nav>
 
 <main class="content" role="main">
