--- a/_includes/cards.html
+++ b/_includes/cards.html
@@ -1,60 +1,41 @@
-<!-- other stuff in your site header like javascript or whatever above here -->
-
-  <!-- <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:site" content="@your_twitter_handle">
-  <meta name="twitter:creator" content="@your_twitter_handle"> -->
-
-  <!-- hardcoding an image here so I don't have to worry about attaching an image to each blog post in the future  -->
-
+{% if page.url %}
+  <meta name="twitter:url" content="{{ site.url }}{{ page.url }}">
+  <meta property="og:url" content="{{ site.url }}{{ page.url }}" >
+{% endif %}
   <meta property="og:image" content="{{ site.url }}/assets/images/site-img.png" />
   <meta name="twitter:image:src" content="{{ site.url }}/assets/images/site-img.png">
-  <meta content="{{ site.title }}" property="og:site_name">
-
-  <!-- Set a page title, or default to site title if missing for some reason  -->
-
-  {% if page.title %}
-    <meta name="twitter:title" content="{{ page.title }}">
-    <meta content="{{ page.title }}" property="og:title">
-    <meta content="article" property="og:type">
-  {% else %}
-    <meta name="twitter:title" content="{{ site.title }}">
-    <meta content="{{ site.title }}" property="og:title">
-    <meta content="website" property="og:type">
-  {% endif %}
-
-  <!-- set page description or default to site description  -->
-
-  {% if page.description %}
-    <meta name="twitter:description" content="{{ page.description }}">
-    <meta content="{{ page.description }}" property="og:description">
-  {% else %}
-    <meta name="twitter:description" content="{{ site.description }}">
-    <meta content="{{ site.description }}" property="og:description">
-  {% endif %}
-
-  {% if page.url %}
-    <meta name="twitter:url" content="{{ site.url }}{{ page.url }}">
-    <meta content="{{ site.url }}{{ page.url }}" property="og:url">
-  {% endif %}
-
-  {% if page.date %}
-    <meta content="{{ page.date | date_to_xmlschema }}" property="article:published_time">
-  {% endif %}
-  {% if page.image %}
-    <meta content="{{ site.url }}/img/twitter_card2.png" property="og:image">
-    <meta property="og:image" content="{{ site.url }}/img/twitter_card2.png" />
-  {% else %}
-    <meta content="{{ site.url }}/img/twitter_card2.png" property="og:image">
-  {% endif %}
-
-  {% if page.categories %}
-    {% for category in page.categories limit:1 %}
-    <meta content="{{ category }}" property="article:section">
-    {% endfor %}
-  {% endif %}
-
-  {% if page.tags %}
-    {% for tag in page.tags %}
-    <meta content="{{ tag }}" property="article:tag">
-    {% endfor %}
-  {% endif %}
+{% if page.title %}
+  <meta name="twitter:title" content="{{ page.title }}">
+  <meta content="{{ page.title }}" property="og:title">
+  <meta content="article" property="og:type">
+{% else %}
+  <meta name="twitter:title" content="{{ site.title }}">
+  <meta content="{{ site.title }}" property="og:title">
+  <meta content="website" property="og:type">
+{% endif %}
+{% if page.excerpt %}
+  <meta name="twitter:description" content="{{ page.description }}">
+  <meta content="{{ page.excerpt }}" property="og:description">
+{% else %}
+  <meta name="twitter:description" content="{{ site.description }}">
+  <meta content="{{ site.description }}" property="og:description">
+{% endif %}
+{% if page.date %}
+  <meta content="{{ page.date | date_to_xmlschema }}" property="article:published_time">
+{% endif %}
+{% if page.image %}
+  <meta content="{{ site.url }}/img/twitter_card2.png" property="og:image">
+  <meta property="og:image" content="{{ site.url }}/assets/images/site-img.png" />
+{% else %}
+  <meta content="{{ site.url }}/assets/images/site-img.png" property="og:image">
+{% endif %}
+{% if page.categories %}
+  {% for category in page.categories limit:1 %}
+  <meta content="{{ category }}" property="article:section">
+  {% endfor %}
+{% endif %}
+{% if page.tags %}
+  {% for tag in page.tags %}
+  <meta content="{{ tag }}" property="article:tag">
+  {% endfor %}
+{% endif %}
