--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-disqus: false
+comments: true
 archive: true
 post_class: post-template
 ---
@@ -22,7 +22,7 @@ post_class: post-template
         <footer class="post-footer">
          {% include post-author.html %}
          {% include share.html %}
-         {% if page.disqus %}
+         {% if page.comments %}
             {% include disqus.html %}
          {% endif %}
         </footer>
