Add optional chaining.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,7 @@
 <meta property="og:image" content="{{site.url}}{{site.cover}}" />
 <meta name="twitter:image:src" content="{{site.url}}{{site.cover}}">
 {% if page.title %}
-<title>{{page.title}}</title>
+<title>{{page.title}} | {{site.name}}</title>
 <meta name="twitter:title" content="{{page.title}}">
 <meta content="{{page.title}}" property="og:title">
 <meta content="article" property="og:type">
