--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,12 +5,12 @@
 <meta property="og:image" content="{{site.url}}{{site.cover}}" />
 <meta name="twitter:image:src" content="{{site.url}}{{site.cover}}">
 {% if page.title %}
-<title>{{page.title}} | {{site.name}}</title>
+<title>{{page.title}}</title>
 <meta name="twitter:title" content="{{page.title}}">
 <meta content="{{page.title}}" property="og:title">
 <meta content="article" property="og:type">
 {% else %}
-<title>{{site.title}}</title>
+<title>{{site.name}}</title>
 <meta name="twitter:title" content="{{site.title}}">
 <meta content="{{site.title}}" property="og:title">
 <meta content="website" property="og:type">
