--- a/_includes/posts.html
+++ b/_includes/posts.html
@@ -1,9 +1,7 @@
-{% assign post_count = 1 %}
-{% for post in paginator.posts reversed %}
+{% for post in paginator.posts %}
     <article class="post">
         <header class="post-header">
-            <h5 class="post-title">{{post_count}}- <a href="{{ post.url }}"> {{ post.title }}</a></h5>
-            {% assign post_count = post_count | plus: 1 %}
+            <h5 class="post-title">{{post_count}}<a href="{{ post.url }}"> {{ post.title }}</a></h5>
         </header>
     </article>
 {% endfor %}
