--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,7 +14,7 @@ post_class: post-template
 
 <main class="content" role="main">
     <article class="post">
-        {% include post-header.html %}
+        <!-- {% include post-header.html %} -->
         <section class="post-content">
             {{content}}
         </section>
